--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -145,3 +145,45 @@ h1 {
 .navBar li a:hover {
     text-decoration: underline;
 }
+
+/* styles.css */
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* Center the content vertically */
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #f2f2f2;
+    border-top: 1px solid #ccc;
+}
+
+.left-content {
+    flex: 1;
+}
+
+.right-content {
+    flex: 1;
+    text-align: right;
+}
+
+.footer-info {
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+
+.footer-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.footer-info a {
+    text-decoration: none;
+    color: #007BFF;
+    font-weight: bold;
+}
+
+.footer-info a:hover {
+    text-decoration: underline;
+}
