--- a/src/main/resources/templates/add-employee.html
+++ b/src/main/resources/templates/add-employee.html
@@ -35,7 +35,7 @@
     <div id="phones">
     </div>
     <button type="button" onclick="addPhone()">Add Phone</button><br/>
-
+    <input type="text" name="address"> <br>
     <label class="labelForm">Address:</label>
     <input type="text" name="address" /><br/>
 
