--- a/src/main/resources/templates/add-employee.html
+++ b/src/main/resources/templates/add-employee.html
@@ -6,7 +6,7 @@
     <title>Employee Management</title>
 </head>
 <body>
-<div th:replace="fragments/header :: header"></div>
+<div th:replace="~{fragments/header :: header}"></div>
 <h1>Create New Employee</h1>
 <form th:action="@{/addEmployee}" method="post" enctype="multipart/form-data" class="employeeForm">
     <label class="labelForm">First Name:</label>
