--- a/src/main/resources/templates/modify-employee.html
+++ b/src/main/resources/templates/modify-employee.html
@@ -6,7 +6,7 @@
     <title>Employee Management</title>
 </head>
 <body>
-<div th:replace="fragments/header :: header"></div>
+<div th:replace="~{fragments/header :: header}"></div>
 <h2>Update Employee</h2>
 
 <form th:action="@{/modifyEmployee}" method="post" enctype="multipart/form-data">
