--- a/src/main/resources/templates/update-employee.html
+++ b/src/main/resources/templates/update-employee.html
@@ -6,7 +6,7 @@
   <title>Employee Management</title>
 </head>
 <body>
-<div th:replace="fragments/header :: header"></div>
+<div th:replace="~{fragments/header :: header}"></div>
 <h1>Modify Employee</h1>
 
 <form th:action="@{/modifyEmployee}" method="post" enctype="multipart/form-data" class="employeeForm">
