--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset = "UTF-8" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link href = "/css/styles.css" rel = "stylesheet"/>
     <title>Employee Management</title>
 </head>
@@ -214,18 +215,6 @@
         <option value="50">50</option>
     </select>
 </div>
-<div class="footer">
-    <div class="left-content">
-        <h1 class="footer-info" th:text="${company.companyName}"></h1>
-        <p class="footer-info" th:text="${company.slogan}"></p>
-        <p class="footer-info" th:text="${company.contactEmail}"></p>
-    </div>
-    <div class="right-content">
-        <p class="footer-info">Address: <span th:text="${company.address}"></span></p>
-        <p class="footer-info">NIF: <span th:text="${company.nif}"></span></p>
-        <p class="footer-info">STAT: <span th:text="${company.stat}"></span></p>
-        <p class="footer-info">RCS: <span th:text="${company.rcs}"></span></p>
-    </div>
-</div>
+<div th:insert="fragments/footer :: footer"></div>
 </body>
 </html>
