--- a/src/main/resources/templates/modify-employee.html
+++ b/src/main/resources/templates/modify-employee.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset = "ISO-8859-1" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link href = "css/form.css" rel = "stylesheet"/>
     <title>Employee Management</title>
 </head>
@@ -46,5 +47,6 @@
 
     </tbody>
 </table>
+<div th:insert="fragments/footer :: footer"></div>
 </body>
 </html>
