--- a/src/main/resources/templates/add-employee.html
+++ b/src/main/resources/templates/add-employee.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset = "ISO-8859-1" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link href = "/css/styles.css" rel = "stylesheet"/>
     <title>Employee Management</title>
 </head>
@@ -73,7 +74,7 @@
 
     <input type="submit" value="Create" class="submitButton"/>
 </form>
-
+<!--<div th:insert="fragments/footer :: footer"></div>-->
 <script>
     function addPhoneInput(countryCodeValue, phoneValue) {
         const phoneInput = document.createElement("input");
