--- a/src/main/resources/templates/update-employee.html
+++ b/src/main/resources/templates/update-employee.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link href="/css/styles.css" rel="stylesheet"/>
   <title>Employee Management</title>
 </head>
@@ -84,7 +85,7 @@
 
   <input type="submit" value="Save" class="submitButton" />
 </form>
-
+<div th:insert="fragments/footer :: footer"></div>
 <script>
   function addPhoneInput(countryCodeValue, phoneValue) {
     const countryCodeInput = document.createElement("input");
